--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A assignment given by fampay",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prettier-format": "prettier --config .prettierrc '*.js' --write",
+    "lint": "eslint . --ext .js"
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,20 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "husky": "^7.0.4",
     "mongoose": "^6.1.9",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
+    "node-fetch": "^3.2.0",
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint",
+      "pre-push": "",
+      "...": "..."
+    }
   }
 }
