--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fampay",
+  "name": "Fampay Youtube",
   "version": "1.0.0",
-  "description": "A assignment given by fampay",
+  "description": "Fampay Youtube API",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
